tests/typing/fail/alias_global_fail.rb


alias $b $a

$a = 17
$b.foo
